fixed the frontend, now charts dont overflow their respective cards, better responsiveness needs to be implemented though

--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -15,7 +15,7 @@ ul {
 }
 
 .mycards {
-    height: 300px;
+    height: 400px;
     margin-top: 20px;
 }
 
